--- a/config.yml
+++ b/config.yml
@@ -17,22 +17,42 @@ gameBox:
     # lore of the button
     lore:
     - ""
-    - "&1Combine till the end"
+    - "&1Shift dem tiles and add 'em up"
   gameButtons:
-    easy:
+    normal:
       materialData: "WOOL:13"
-      displayName: "&aTest1"
+      displayName: "&a2048"
       lore:
       - ""
       - "&1Cost: &45"
-      - "&1Reward: &a7"
-      - "&1Tokens: &a3"
-      slot: 11
+      - "&1Money rewards start at a score of &6350"
+      - "&1You can win tokens above &61500"
+      slot: 20
       cost: 5
-      reward: 7
-      tokens: 3
+      scoreIntervals:
+        # all keys have to be integers otherwise they will be ignored and a warning will be printed in the console
+
+        # money is only paid if economy is enabled
+        # tokens can be used in the GameBox shop
+
+        # You can add as many intervals as you want to. The order of the intervals doesn't matter
+        #   the given reward/messages/commands/broadcasts will always be used if the game is finished with a score between the key and the
+        #   next higher key. For the highest key the interval goes to infinity
+        0:
+          money: 0
+          tokens: 0
+        350:
+          money: 5
+        500:
+          money: 10
+        1500:
+          money: 20
+          tokens: 1
+        3000:
+          money: 50
+          tokens: 2
     saveStats:
-      materialData: "diamond_block"
+      materialData: "159:3"
       displayName: "&c&lCompetition"
       lore:
       - ""
@@ -40,27 +60,39 @@ gameBox:
       - "&aGood luck!"
       - ""
       - "&1Cost: &450"
-      - "&1Reward: &a75"
-      - "&1Tokens: &a3"
+      - "&1Money rewards start at a score of &6350"
+      - "&1You can win tokens above &61500"
       slot: 24
       cost: 50
-      reward: 75
       # if true the best score of this button is saved
       saveStats: true
-      tokens: 3
+      scoreIntervals:
+        0:
+          money: 0
+          tokens: 0
+        350:
+          money: 5
+        500:
+          money: 10
+        1500:
+          money: 20
+          tokens: 1
+        3000:
+          money: 50
+          tokens: 2
   topListButtons:
     # use the same key as the game you want to display the top list for
     #   for that button 'saveStats' must be true (see above)
     saveStats:
-      materialData: "diamond_block"
+      materialData: "159:11"
       displayName: "&cTop list"
       lore:
       - ""
-      - "&cCompetition &1top list"
+      - "&cCompetition &1Top List"
       slot: 33
       # inventory title of the top list (%player% and %game%)
       inventoryTitle: '              Top List'
-      # Lore of the skulls in the inventory. Use %rank% for the rank and %time% for the time in 'mm:ss'
+      # Lore of the skulls in the inventory. Use %rank% for the rank and %score% for the highest score of the player
       skullLore:
       - ''
       - '&6Rank:&1 %rank%'
@@ -80,35 +112,66 @@ economy:
 # if you want to you can set a lore. Just add a node 'lore' to a tile and make it a list
 tiles:
   1:
-    materialData: "WOOL:1"
+    materialData: "WOOL"
     displayName: "&a2"
   2:
-    materialData: "WOOL:2"
+    materialData: "WOOL:1"
     displayName: "&a4"
   3:
-    materialData: "WOOL:3"
+    materialData: "WOOL:4"
     displayName: "&a8"
   4:
-    materialData: "WOOL:4"
+    materialData: "WOOL:5"
     displayName: "&a16"
   5:
-    materialData: "WOOL:5"
+    materialData: "WOOL:3"
     displayName: "&a32"
   6:
-    materialData: "WOOL:6"
+    materialData: "WOOL:2"
     displayName: "&a64"
   7:
-    materialData: "WOOL:7"
+    materialData: "WOOL:11"
     displayName: "&a128"
   8:
-    materialData: "WOOL:8"
+    materialData: "WOOL:13"
     displayName: "&a256"
   9:
-    materialData: "WOOL:8"
+    materialData: "159"
     displayName: "&a512"
+    glow: true
   10:
-    materialData: "WOOL:8"
+    materialData: "159:1"
     displayName: "&a1024"
+    glow: true
   11:
-    materialData: "WOOL:8"
+    materialData: "159:4"
     displayName: "&a2048"
+    glow: true
+  12:
+    materialData: "159:5"
+    displayName: "&a4096"
+    glow: true
+  13:
+    materialData: "159:3"
+    displayName: "&a&l8192"
+    glow: true
+  14:
+    materialData: "159:2"
+    displayName: "&a&l16384"
+    glow: true
+  15:
+    materialData: "159:11"
+    displayName: "&a&l32768"
+    glow: true
+  16:
+    materialData: "159:13"
+    displayName: "&a&l65536"
+    glow: true
+  17:
+    materialData: "57"
+    displayName: "&c&l131072"
+    glow: true
+    lore:
+    - "&9Impossible"
+    - "&9..."
+    - "&cCheater!"
