--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: 2048
 author: Nikl
-main: me.nikl.twoofoureight.Main
-version: 1.3.1
+main: me.nikl.gamebox.games.TofeMain
+version: 2.0.0
 website: nikl.me
 depend: [GameBox]
