--- a/src/main/resources/games/twoofoureight/config.yml
+++ b/src/main/resources/games/twoofoureight/config.yml
@@ -21,7 +21,7 @@ gameBox:
   gameButtons:
     normal:
       materialData: "WOOL:13"
-      displayName: "&a2048"
+      displayName: "&a&l2048"
       lore:
       - ""
       - "&1Cost: &45"
@@ -50,7 +50,7 @@ gameBox:
           tokens: 1
     saveStats:
       materialData: "159:3"
-      displayName: "&c&lCompetition"
+      displayName: "&a&lCompetition"
       lore:
       - ""
       - "&cClimb up the &ltop list"
@@ -82,7 +82,7 @@ gameBox:
     #   for that button 'saveStats' must be true (see above)
     saveStats:
       materialData: "159:11"
-      displayName: "&cTop list"
+      displayName: "&a&lTop list"
       lore:
       - ""
       - "&cCompetition &1Top List"
