--- a/src/main/resources/games/twoofoureight/config.yml
+++ b/src/main/resources/games/twoofoureight/config.yml
@@ -11,7 +11,7 @@ langFile: "default"
 gameBox:
   mainButton:
     # define the Material and data for the button (format: 'material:data')
-    materialData: "159:11"
+    materialData: "stained_clay:11"
     # display name of the button
     displayName: "&32048"
     # lore of the button
@@ -49,7 +49,7 @@ gameBox:
           money: 20
           tokens: 1
     saveStats:
-      materialData: "159:3"
+      materialData: "stained_clay:3"
       displayName: "&a&lCompetition"
       lore:
       - ""
@@ -81,7 +81,7 @@ gameBox:
     # use the same key as the game you want to display the top list for
     #   for that button 'saveStats' must be true (see above)
     saveStats:
-      materialData: "159:11"
+      materialData: "stained_clay:11"
       displayName: "&a&lTop list"
       lore:
       - ""
@@ -104,7 +104,7 @@ rules:
   # if true the grid will be surrounded with black
   surroundTheGrid:
     enable: true
-    materialData: "160:15"
+    materialData: "stained_glass_pane:15"
 
 # Buttons in the game
 buttons:
@@ -147,39 +147,39 @@ tiles:
     materialData: "WOOL:13"
     displayName: "&a256"
   9:
-    materialData: "159"
+    materialData: "stained_clay"
     displayName: "&a512"
     glow: true
   10:
-    materialData: "159:1"
+    materialData: "stained_clay:1"
     displayName: "&a1024"
     glow: true
   11:
-    materialData: "159:4"
+    materialData: "stained_clay:4"
     displayName: "&a2048"
     glow: true
   12:
-    materialData: "159:5"
+    materialData: "stained_clay:5"
     displayName: "&a4096"
     glow: true
   13:
-    materialData: "159:3"
+    materialData: "stained_clay:3"
     displayName: "&a&l8192"
     glow: true
   14:
-    materialData: "159:2"
+    materialData: "stained_clay:2"
     displayName: "&a&l16384"
     glow: true
   15:
-    materialData: "159:11"
+    materialData: "stained_clay:11"
     displayName: "&a&l32768"
     glow: true
   16:
-    materialData: "159:13"
+    materialData: "stained_clay:13"
     displayName: "&a&l65536"
     glow: true
   17:
-    materialData: "57"
+    materialData: "diamond_block"
     displayName: "&c&l131072"
     glow: true
     lore:
