add displayname of grid items to config file (resolves #2)

--- a/src/main/resources/games/twoofoureight/config.yml
+++ b/src/main/resources/games/twoofoureight/config.yml
@@ -1,9 +1,14 @@
-# ----------------------------------------------------------------------------#
-#                                                                             #
-#                                2048 config                                  #
-#                                                                             #
-#                                  by Nikl                                    #
-# ----------------------------------------------------------------------------#
+# ------------------------------------------------------------------------#
+#                                                                         #
+#                            ___   ___  _  _   ___                        #
+#                           |__ \ / _ \| || | / _ \                       #
+#                              ) | | | | || || (_) |                      #
+#                             / /| | | |__   _> _ <                       #
+#                            / /_| |_| |  | || (_) |                      #
+#                           |____|\___/   |_| \___/                       #
+#                                                                         #
+#                    by Nikl (and Ascii Art by TheIntelloBox)             #
+# ------------------------------------------------------------------------#
 
 # name of the language file (in the folder 'language')
 langFile: "default"
@@ -105,6 +110,7 @@ rules:
   surroundTheGrid:
     enable: true
     materialData: "stained_glass_pane:15"
+    displayName: "&a2"
 
 # Buttons in the game
 buttons:
